# brytlog

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  llms.txt  pyproject.toml  ruff.toml
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
src/brytlog/: __init__.py  cli.py  config.py  llm_client.py  parser.py  redactor.py  scanner.py  stream_capture.py  summarizer.py  wizard.py
tests/: run_tests.py  test.py  test_basic.py  test_config.py  test_execution.py  test_llm_quality.py  test_pre_launch.py  test_prompt.py  test_redaction.py  test_wizard.py
tests/scenarios/: env_test_python.py
