[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brytlog"
version = "0.1.1"
description = "AI crash analyst. Wraps any terminal command and in case it fails appends to the native log diagnosed problem and suggested fix."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Selà", email = "ops@selahq.com" }
]
keywords = ["debugging", "llm", "crash", "cli", "devtools", "log"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Debuggers",
]
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.scripts]
brytlog = "brytlog.cli:main"

[project.urls]
Homepage = "https://github.com/Guy-Sela/brytlog"
Issues = "https://github.com/Guy-Sela/brytlog/issues"
